--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,15 +4,15 @@ on:
   push:
 
 jobs:
-  static-analysis: #mypy, black, ruff 등 정적 분석
-    runs-on: ubuntu-22.04 # 실제 프로덕션에서는 모든 버전을 고정하는 것이 좋다. (예기치 못한 버전 장애를 막기 위해)
+  static-analysis:
+    runs-on: ubuntu-22.04
     steps:
-      - name: Check out the codes
+      - name: Check out code
         uses: actions/checkout@v2
 
-      - name: Setup python environment
+      - name: Setup Python
         id: setup-python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: "3.13"
 
@@ -20,52 +20,54 @@ jobs:
         id: cache-poetry
         uses: actions/cache@v4
         with:
-          key: poetry-1.8.5
-          path: ~/.local/ # poetry 는 ~/.local 에 설치되므로, 해당 디렉터리를 캐시한다.
+          key: poetry-2.2.1
+          path: ~/.local/
 
       - name: Install Poetry
-        if: steps.cache-poetry.outputs.cache-hit != 'ture' # cache 불러오기 실패 > 설치
+        if: steps.cache-poetry.outputs.cache-hit != 'true'
+        id: install-poetry
         run: |
-          curl -sSL https://install.python-poetry.org | python3 - --version 1.8.5
+          curl -sSL https://install.python-poetry.org | python3 - --version 2.2.1
 
-      - name: Register Poetry bin
-        run: echo "${HOME}/.poetry/bin" >> $GITHUB_PATH # 경로 지정
+      - name: Add Poetry to PATH
+        id: add-poetry-path
+        run: echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
       - name: Cache dependencies
         id: cache-venv
         uses: actions/cache@v4
         with:
-          # 파이썬 버전이 바뀌었을 때, lock 파일이나 toml 파일이 바뀌었을때 종속성을 재설치합니다.
-          # 바뀐 것이 없는 경우에는 캐싱된 종속성을 사용합니다.
-          key: python-${{ steps.setup-python.outputs.python-version }}-poetry-lock-${{ hashFiles('poetry.lock') }}-toml-${{ hashFiles('pyproject.toml') }}-poetry-1.8.5
+          key: python-${{ steps.setup-python.outputs.python-version }}-poetry-lock-${{ hashFiles('poetry.lock') }}-toml-${{ hashFiles('pyproject.toml') }}
           path: /home/runner/.cache/pypoetry/virtualenvs/
 
       - name: Install dependencies
+        id: install-deps
         if: steps.cache-venv.outputs.cache-hit != 'true'
         run: poetry install --no-root
 
       - name: Run Black
+        id: black
         run: poetry run black . --check
 
       - name: Run Ruff
+        id: ruff
         run: |
           poetry run ruff check --select I
           poetry run ruff check
 
       - name: Run Mypy
+        id: mypy
         run: poetry run mypy .
 
-
-# 전체 테스트 실행
   test:
     runs-on: ubuntu-22.04
     steps:
-      - name: Check out the codes
+      - name: Check out code
         uses: actions/checkout@v2
 
-      - name: Setup python environment
+      - name: Setup Python
         id: setup-python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: "3.13"
 
@@ -73,29 +75,33 @@ jobs:
         id: cache-poetry
         uses: actions/cache@v4
         with:
-          key: poetry-1.8.5
-          path: ~/.local
+          key: poetry-2.2.1
+          path: ~/.local/
 
       - name: Install Poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
+        id: install-poetry
         run: |
-          curl -sSL https://install.python-poetry.org | python3 - --version 1.8.5
+          curl -sSL https://install.python-poetry.org | python3 - --version 2.2.1
 
-      - name: Register Poetry bin
-        run: echo "${HOME}/.poetry/bin" >> $GITHUB_PATH
+      - name: Add Poetry to PATH
+        id: add-poetry-path
+        run: echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
       - name: Cache dependencies
         id: cache-venv
         uses: actions/cache@v4
         with:
-          key: python-${{ steps.setup-python.outputs.python-version }}-poetry-lock-${{ hashFiles('poetry.lock') }}-toml-${{ hashFiles('pyproject.toml') }}-poetry-1.8.5
+          key: python-${{ steps.setup-python.outputs.python-version }}-poetry-lock-${{ hashFiles('poetry.lock') }}-toml-${{ hashFiles('pyproject.toml') }}
           path: /home/runner/.cache/pypoetry/virtualenvs/
 
       - name: Install dependencies
+        id: install-deps
         if: steps.cache-venv.outputs.cache-hit != 'true'
         run: poetry install --no-root
 
       - name: Run tests
+        id: pytest
         run: |
           poetry run coverage run -m pytest .
           poetry run coverage report -m
