fix: 프로젝트 패키지 설치 가능하도록 설정 수정 및 README 추가

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,11 @@ dependencies = [
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poetry]
+packages = [
+    { include = "app" }
+]
+
 [dependency-groups]
 dev = [
     "black (==24.10.0)",
