--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         id: setup-python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.13"
+          python-version: "3.12"
 
       - name: Cache Poetry
         id: cache-poetry
@@ -43,7 +43,7 @@ jobs:
       - name: Install dependencies
         id: install-deps
         if: steps.cache-venv.outputs.cache-hit != 'true'
-        run: poetry install --no-root
+        run: poetry install
 
       - name: Run Black
         id: black
@@ -69,7 +69,7 @@ jobs:
         id: setup-python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.13"
+          python-version: "3.12"
 
       - name: Cache Poetry
         id: cache-poetry
@@ -98,7 +98,7 @@ jobs:
       - name: Install dependencies
         id: install-deps
         if: steps.cache-venv.outputs.cache-hit != 'true'
-        run: poetry install --no-root
+        run: poetry install
 
       - name: Run tests
         id: pytest
