refactor: HTML 구조 분리 및 동적 html로 변경 - projects

--- a/projects.json
+++ b/projects.json
@@ -1,29 +1,17 @@
 [
   {
-    "title": "Sussyoo",
-    "desc": "웹 서비스 백엔드 개발 · 로그인 기능 구현 담당",
-    "image": "/static/images/project1.png",
-    "main": true,
-    "mini1" : "/static/images/project1-1.png",
-    "mini2" : "/static/images/project1-2.png",
-    "mini3" : "/static/images/project1-3.png"
+    "title": "프로젝트1",
+    "desc": "프로젝트1 설명을 구구절절 멋지게 보이도록 적어보자..",
+    "image": "/static/images/work-1.jpg"
   },
-  {
-    "title": "Focuz",
-    "desc": "모바일 앱 백엔드 개발 · 수면 인지 테스트 모듈 담당",
-    "image": "static/images/project2.png",
-    "main": true,
-    "mini1" : "/static/images/project2-1.png",
-    "mini2" : "/static/images/project2-2.png",
-    "mini3" : "/static/images/project2-3.png"
+    {
+    "title": "프로젝트2",
+    "desc": "프로젝트2 설명을 구구절절 멋지게 보이도록 적어보자..",
+    "image": "/static/images/work-2.jpg"
   },
-  {
-    "title": "CJcus",
-    "desc": "윈도우 프로그램 개발 · 메일 전송 및 거래명세서 기능 전담",
-    "image": "static/images/project3.jpg",
-    "main": true,
-    "mini1" : "/static/images/project3-1.png",
-    "mini2" : "/static/images/project3-2.png",
-    "mini3" : "/static/images/project3-3.png"
+    {
+    "title": "프로젝트3",
+    "desc": "프로젝트3 설명을 구구절절 멋지게 보이도록 적어보자..",
+    "image": "/static/images/work-3.png"
   }
 ]
