--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "pydantic-settings (>=2.11.0,<2.12.0)",
     "pydantic-core (==2.33.2)",
     "python-dotenv (==1.1.1)",
-    "python-multipart (==0.0.20)"
+    "python-multipart (==0.0.20)",
+    "jinja2 (==3.1.6)",
+    "markupsafe (==3.0.3)"
 ]
 
 [build-system]
@@ -42,8 +44,6 @@ dev = [
     "colorama (==0.4.6)",
     "h11 (==0.16.0)",
     "idna (==3.10)",
-    "jinja2 (==3.1.6)",
-    "markupsafe (==3.0.3)",
     "sniffio (==1.3.1)",
     "typing-inspection (==0.4.1)",
     "typing-extensions (==4.15.0)"
